--- a/attractions.html
+++ b/attractions.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a> <!--This is the Sheldon R Larson ranch in top left corner-->
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a> <!--This is the Sheldon R Larson ranch in top left corner-->
             </div>
             <ul> <!--This is the navigation menu list-->
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,17 +81,17 @@
         <div id="overlay"></div> <!--Overlay for deselecting menu-->
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt=""> <!--background image-->
+            <img src="images/background-image.jpg" alt="background image of aspen trees"> <!--background image-->
         </div>    
 
         <div class="overview-container">
             <h1>Area Attractions</h1>
-            <p>The beautiful Sanpete valley has much to offer, from the world famous Arapeen trail system to its long, rich history! We've compiled a short list of our favorite activities below to get you started on planning your trip. But really, you can't go wrong with any of these activites!Learn more about what the gorgeous Sanpete valley has to offer and get started on your next vacation with us!</p>
+            <p>The beautiful Sanpete valley has much to offer, from the world famous Arapeen trail system to its long, rich history! We've compiled a short list of our favorite activities below to get you started on planning your trip. But really, you can't go wrong with any of these activities! Learn more about what the gorgeous Sanpete valley has to offer and get started on your next vacation with us!</p>
 
             <!--ATV-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="atv.html"><img src="images/053.jpg" alt=""></a>
+                        <a href="atv.html"><img src="images/053.jpg" alt="ATV group on Arapeen trail"></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="atv.html"><h3>ATV</h3></a>
@@ -105,7 +105,7 @@
             <!--Hiking-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="hiking.html"><img src="images/070.jpg" alt=""></a>
+                        <a href="hiking.html"><img src="images/070.jpg" alt="Hiking Maple Canyon loop trail""></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="hiking.html"><h3>Hiking</h3></a>
@@ -119,7 +119,7 @@
             <!--Rock Climbing-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="rockClimbing.html"><img src="images/rock_climbing_1.jpg" alt=""></a>
+                        <a href="rockClimbing.html"><img src="images/rock_climbing_1.jpg" alt="Rock Climbing"></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="rockClimbing.html"><h3>Rock Climbing</h3></a>
@@ -133,7 +133,7 @@
             <!--Snowmobiling-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="snowmobiling.html"><img src="images/072.jpg" alt=""></a>
+                        <a href="snowmobiling.html"><img src="images/072.jpg" alt="Snowmobiling Sanpete's Ephraim Canyon"></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="snowmobiling.html"><h3>Snowmobiling</h3></a>
@@ -147,7 +147,7 @@
             <!--Mountain Biking-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="mtnBiking.html"><img src="images/mtn_bike_1.jpg" alt=""></a>
+                        <a href="mtnBiking.html"><img src="images/mtn_bike_1.jpg" alt="mountain biking"></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="mtnBiking.html"><h3>Mountain Biking</h3></a>
@@ -161,11 +161,11 @@
             <!--History-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="history.html"><img src="images/history_1.jpg" alt=""></a>
+                        <a href="history.html"><img src="images/history_1.jpg" alt="Spring City Utah's historic building"></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="history.html"><h3>History</h3></a>
-                    <p>Sanpete’s Heritage is prevalent today with many buildings built in the 1800’s. Native American sites, historic buildings, and cultural sites draw history and culture buffs to this area. Spring City (listed as one of the prettiest towns in America by Forbes) is a must see for its history!</p>
+                    <p>Sanpete’s Heritage is prevalent today with many buildings built in the 1800s. Native American sites, historic buildings, and cultural sites draw history and culture buffs to this area. Spring City (listed as one of the prettiest towns in America by Forbes) is a must see for its history!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="history.html"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -175,7 +175,7 @@
             <!--Sightseeing-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="sightseeing.html"><img src="images/064.jpg" alt=""></a>
+                        <a href="sightseeing.html"><img src="images/064.jpg" alt="Sanpete County's Rocky Mountains"></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="sightseeing.html"><h3>Sightseeing</h3></a>
@@ -189,11 +189,11 @@
             <!--Other-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="otherAttractions.html"><img src="images/051.jpg" alt=""></a>
+                        <a href="otherAttractions.html"><img src="images/051.jpg" alt="Wakeboarding Gunnison Reservoir"></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="otherAttractions.html"><h3>And So Much More</h3></a>
-                    <p>From state parks to boating and snowkiting, Sanpete valley is an vacation paradise! There is something here for everyone, including a nearly fully intact Columbian mammoth that was unearthed here in 1988, aquatic centers, and old-fashioned drive-in movies with burgers and fries.</p>
+                    <p>From state parks to boating and snowkiting, Sanpete valley is a vacation paradise! There is something here for everyone, including a nearly fully intact Columbian mammoth that was unearthed here in 1988, aquatic centers, and old-fashioned drive-in movies with burgers and fries.</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="otherAttractions.html"><p>Click here</p><p>for more</p><p>information</p></a>
