--- a/atv.html
+++ b/atv.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,18 +81,18 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>    
 
         <div class="overview-container">
             <h1>ATV Trails</h1>
-            <p>Named after the Ute Indian Chief, the famed Arapeen trail system boasts over 350,000 acres of beautiful ATV trails for ATV's of all sizes. The towns in Sanpete are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from our cabin doorstep! Read more about our recommended ATV trails below, or if you want more trails to look at, we recommend also looking at this <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a> or looking at more free and purchasable trail maps at <a href="http://sanpete.com/pages/atv_map" target="_blank">Sanpete.com</a>.</p>
+            <p>Named after the Ute Indian Chief, the famed Arapeen trail system boasts over 350,000 acres of beautiful ATV trails for ATVs of all sizes. The towns in Sanpete are known as "ATV friendly", meaning you can ride through town (except for on highway 89) on your ATV, giving you the convenience of starting and ending from our cabin doorstep! Read more about our recommended ATV trails below, or if you want more trails to look at, we recommend also looking at this <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a> or looking at more free and purchasable trail maps at <a href="http://sanpete.com/pages/atv_map" target="_blank">Sanpete.com</a>.</p>
             <p>PLEASE NOTE: The numbers in the trail recommendations below refer to trail designations on the <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank">free digital map</a>. Circled numbers indicate an easy trail, whereas a square indicates a moderate trail, and a diamond indicates a difficult trail. The numbers in red circles refer to GPS intersection points given on the map. All of these routes are great single-day rides between 40-60 miles with more information listed on the map itself! We recommend getting the purchasable <a href="https://www.utahatvtrails.org/store/p1/Deluxe_Arapeen_OHV_Trail_Map.html" target="_blank">deluxe map</a> (we have a cabin copy as well!) or exploring <a href="http://sanpete.com/pages/atv" target="_blank">Sanpete.com</a> for more information.</p>
             
             <!--Ephraim Canyon-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/jet-fox.jpg" alt=""></a>
+                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/jet-fox.jpg" alt="Jet Fox Reservoir"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><h3>Lake Hill to Jet Fox Res.</h3></a>
@@ -107,7 +107,7 @@
             <!--Mt. Pleasant Canyon-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/miller-flat.jpg" alt=""></a>
+                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/miller-flat.jpg" alt="Miller's Flat ATV trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><h3>Miller's Flat Loop</h3></a>
@@ -122,7 +122,7 @@
             <!--Manti Canyon-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/duck-fork.jpg" alt=""></a>
+                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/duck-fork.jpg" alt="Duck Fork Reservoir"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><h3>Manti Canyon</h3></a>
@@ -137,7 +137,7 @@
             <!--Mayfield Canyon-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/078.jpg" alt=""></a>
+                    <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><img src="images/078.jpg" alt="Julius Flat Reservoir"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/arapeen_ohv_trail_map.pdf" target="_blank"><h3>Julius Flat Loop</h3></a>
