--- a/guestCabin.html
+++ b/guestCabin.html
@@ -12,7 +12,7 @@
         <!-- Header -->
         <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>
 
         <div class="overview-container">
@@ -106,24 +106,25 @@
 
                 <div class="cycle-caption cabin-image-caption"></div>
 
-                <img class="cabin-image-carousel-img" src="images/027.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/028.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/001.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/029.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/030.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/031.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/032.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/033.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/034.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/035.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/037.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/038.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/039.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/040.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/016.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/018.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/019.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/020.jpg" alt="">
+                <img class="cabin-image-carousel-img" src="images/027.jpg" alt="guest cabin">
+                <img class="cabin-image-carousel-img" src="images/028.jpg" alt="guest cabin">
+                <img class="cabin-image-carousel-img" src="images/001.jpg" alt="main cabin and guest cabin">
+                <img class="cabin-image-carousel-img" src="images/029.jpg" alt="living room - guest cabin">
+                <img class="cabin-image-carousel-img" src="images/030.jpg" alt="living room - guest cabin">
+                <img class="cabin-image-carousel-img" src="images/031.jpg" alt="master bedroom - guest cabin">
+                <img class="cabin-image-carousel-img" src="images/032.jpg" alt="kitchen - guest cabin">
+                <img class="cabin-image-carousel-img" src="images/033.jpg" alt="loft - guest cabin">
+                <img class="cabin-image-carousel-img" src="images/034.jpg" alt="guest cabin interior">
+                <img class="cabin-image-carousel-img" src="images/035.jpg" alt="bathroom - guest cabin">
+                <img class="cabin-image-carousel-img" src="images/037.jpg" alt="guest cabin from main cabin balcony">
+                <img class="cabin-image-carousel-img" src="images/038.jpg" alt="ranch heirloom">
+                <img class="cabin-image-carousel-img" src="images/039.jpg" alt="hutch heirloom">
+                <img class="cabin-image-carousel-img" src="images/040.jpg" alt="hutch heirloom">
+                <img class="cabin-image-carousel-img" src="images/016.jpg" alt="cabins backyard">
+                <img class="cabin-image-carousel-img" src="images/020.jpg" alt="handcrafted front gate">
+                <img class="cabin-image-carousel-img" src="images/018.jpg" alt="horshoe pit">
+                <img class="cabin-image-carousel-img" src="images/019.jpg" alt="utah century ranch certification">
+                <img class="cabin-image-carousel-img" src="images/020.jpg" alt="handcrafted front gate">
             </div>
 
 
