--- a/hiking.html
+++ b/hiking.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>    
 
         <div class="overview-container">
@@ -91,7 +91,7 @@
             <!--Maple Canyon Loop-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.alltrails.com/trail/us/utah/maple-canyon-loop-trail--3" target="_blank"><img src="images/070.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/maple-canyon-loop-trail--3" target="_blank"><img src="images/070.jpg" alt="maple canyon loop trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/maple-canyon-loop-trail--3" target="_blank"><h3>Maple Canyon Loop Trail</h3></a>
@@ -106,7 +106,7 @@
             <!--Box Canyon-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.alltrails.com/trail/us/utah/maples-box-canyon-trail" target="_blank"><img src="images/055.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/maples-box-canyon-trail" target="_blank"><img src="images/055.jpg" alt="box canyon trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/maples-box-canyon-trail" target="_blank"><h3>Box Canyon Trail</h3></a>
@@ -121,7 +121,7 @@
             <!--South Tent Mtn-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.alltrails.com/trail/us/utah/south-tent-mountain-summit-from-skyline-drive" target="_blank"><img src="images/south-tent-mountain_1.png" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/south-tent-mountain-summit-from-skyline-drive" target="_blank"><img src="images/south-tent-mountain_1.png" alt="south tent mountain trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/south-tent-mountain-summit-from-skyline-drive" target="_blank"><h3>South Tent Mtn Summit</h3></a>
@@ -136,7 +136,7 @@
             <!--Mt Nebo-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.alltrails.com/trail/us/utah/andrews-ridge-to-mt-nebo-south-peak" target="_blank"><img src="images/062.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/andrews-ridge-to-mt-nebo-south-peak" target="_blank"><img src="images/062.jpg" alt="mt. nebo trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/andrews-ridge-to-mt-nebo-south-peak" target="_blank"><h3>Mount Nebo</h3></a>
@@ -151,7 +151,7 @@
             <!--Milky Falls-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.alltrails.com/trail/us/utah/milky-falls" target="_blank"><img src="images/061.jpg" alt=""></a>
+                    <a href="https://www.alltrails.com/trail/us/utah/milky-falls" target="_blank"><img src="images/061.jpg" alt="milky falls trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.alltrails.com/trail/us/utah/milky-falls" target="_blank"><h3>Milky Falls Trail</h3></a>
