--- a/history.html
+++ b/history.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,17 +81,17 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>    
 
         <div class="overview-container">
             <h1>Historical Sites</h1>
-            <p>Sanpete’s Pioneer Heritage is prevalent today with many rock homes and buildings built in the 1800’s. Native American sites, pioneer homesteads, historic buildings, and cultural sites draw history and culture buffs to this area. Read more about our recommended historical sites below, or if you want more sites, we recommend also looking at <a href="http://sanpete.com/pages/historical" target="_blank">Sanpete.com</a>.</p>
+            <p>Sanpete’s Pioneer Heritage is prevalent today with many rock homes and buildings built in the 1800s. Native American sites, pioneer homesteads, historic buildings, and cultural sites draw history and culture buffs to this area. Read more about our recommended historical sites below, or if you want more sites, we recommend also looking at <a href="http://sanpete.com/pages/historical" target="_blank">Sanpete.com</a>.</p>
 
             <!--Spring City-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="http://sanpete.com/pages/historicalspringcity/" target="_blank"><img src="images/spring-city_1.jpg" alt=""></a>
+                    <a href="http://sanpete.com/pages/historicalspringcity/" target="_blank"><img src="images/spring-city_1.jpg" alt="historic spring city"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://sanpete.com/pages/historicalspringcity/" target="_blank"><h3>Spring City</h3></a>
@@ -105,7 +105,7 @@
             <!-- Mammoth -->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="http://sanpete.com/businesses/show/313-fairview-museum-of-history-and-art" target="_blank"><img src="images/060.jpg" alt=""></a>
+                    <a href="http://sanpete.com/businesses/show/313-fairview-museum-of-history-and-art" target="_blank"><img src="images/060.jpg" alt="historic columbian mammoth"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://sanpete.com/businesses/show/313-fairview-museum-of-history-and-art" target="_blank"><h3>Intact Columbian Mammoth</h3></a>
@@ -119,11 +119,11 @@
             <!-- Ephraim/Manti -->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.ephraimcity.org/DocumentCenter/View/152/Walking-Tour-of-Ephraim-PDF?bidId=" target="_blank"><img src="images/ephraim_1.jpeg" alt=""></a>
+                    <a href="https://www.ephraimcity.org/DocumentCenter/View/152/Walking-Tour-of-Ephraim-PDF?bidId=" target="_blank"><img src="images/ephraim_1.jpeg" alt="historic ephraim, utah building"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.ephraimcity.org/DocumentCenter/View/152/Walking-Tour-of-Ephraim-PDF?bidId=" target="_blank"><h3>Ephraim/Manti</h3></a>
-                    <p>Our little Ephraim and Manti city are home to several historical sites from the impressive Manti Temple built in the 1880's to the Chief Blackhawk Massacre monument. Between Ephraim and neighboring Manti city, there's enough to keep both history and non-history buffs entertained all day!</p>
+                    <p>Our little Ephraim and Manti city are home to several historical sites from the impressive Manti Temple built in the 1880s to the Chief Blackhawk Massacre monument. Between Ephraim and neighboring Manti city, there's enough to keep both history and non-history buffs entertained all day!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://www.ephraimcity.org/DocumentCenter/View/152/Walking-Tour-of-Ephraim-PDF?bidId=" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -133,7 +133,7 @@
             <!-- Rat Fink-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="http://www.ratfink.com/ed-roth-museum.php" target="_blank"><img src="images/ed-roth_1.jpg" alt=""></a>
+                    <a href="http://www.ratfink.com/ed-roth-museum.php" target="_blank"><img src="images/ed-roth_1.jpg" alt="rat fink museum"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://www.ratfink.com/ed-roth-museum.php" target="_blank"><h3>Ed Roth Museum</h3></a>
