--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Header -->
         <nav class="opaque-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -104,11 +104,11 @@
         <!--Background Images-->
         <div class="homepage-background-container">
             <div class="cycle-slideshow homepage-background" data-cycle-timeout="4000" data-cycle-speed="2000">
-                <img class="overview-image-carousel-img" src="images/002.jpg" alt="">
-                <img class="overview-image-carousel-img" src="images/005.jpg" alt="">
-                <img class="overview-image-carousel-img" src="images/016.jpg" alt="">
-                <img class="overview-image-carousel-img" src="images/001.jpg" alt="">
-                <img class="overview-image-carousel-img" src="images/background-image.jpg" alt="">
+                <img class="overview-image-carousel-img" src="images/002.jpg" alt="main cabin">
+                <img class="overview-image-carousel-img" src="images/005.jpg" alt="living room - main cabin">
+                <img class="overview-image-carousel-img" src="images/016.jpg" alt="cabins backyard">
+                <img class="overview-image-carousel-img" src="images/001.jpg" alt="main cabin and guest cabin">
+                <img class="overview-image-carousel-img" src="images/background-image.jpg" alt="ephraim canyon aspen tree grove">
             </div>
         </div>
         
