--- a/mainCabin.html
+++ b/mainCabin.html
@@ -12,7 +12,7 @@
         <!-- Header -->
         <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="backgroun image of aspen trees">
         </div>
 
         <div class="overview-container">
@@ -104,32 +104,32 @@
 
                 <div class="cycle-caption cabin-image-caption"></div>
 
-                <img class="cabin-image-carousel-img" src="images/002.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/003.JPG" alt="">
-                <img class="cabin-image-carousel-img" src="images/001.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/004.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/005.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/006.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/007.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/008.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/009.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/010.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/011.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/012.JPG" alt="">
-                <img class="cabin-image-carousel-img" src="images/013.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/014.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/015.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/016.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/017.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/018.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/020.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/021.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/022.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/023.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/024.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/025.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/026.jpg" alt="">
-                <img class="cabin-image-carousel-img" src="images/027.jpg" alt="">
+                <img class="cabin-image-carousel-img" src="images/002.jpg" alt="main cabin">
+                <img class="cabin-image-carousel-img" src="images/003.JPG" alt="main cabin">
+                <img class="cabin-image-carousel-img" src="images/001.jpg" alt="main cabin and guest cabin">
+                <img class="cabin-image-carousel-img" src="images/004.jpg" alt="courtyard with firepit">
+                <img class="cabin-image-carousel-img" src="images/005.jpg" alt="living room - main cabin">
+                <img class="cabin-image-carousel-img" src="images/006.jpg" alt="living room - main cabin">
+                <img class="cabin-image-carousel-img" src="images/007.jpg" alt="master bedroom - main cabin">
+                <img class="cabin-image-carousel-img" src="images/008.jpg" alt="master bedroom - main cabin">
+                <img class="cabin-image-carousel-img" src="images/009.jpg" alt="kitchen - main cabin">
+                <img class="cabin-image-carousel-img" src="images/010.jpg" alt="kitchen - main cabin">
+                <img class="cabin-image-carousel-img" src="images/011.jpg" alt="loft - main cabin">
+                <img class="cabin-image-carousel-img" src="images/012.JPG" alt="loft - main cabin">
+                <img class="cabin-image-carousel-img" src="images/013.jpg" alt="bathroom - main cabin">
+                <img class="cabin-image-carousel-img" src="images/014.jpg" alt="ranch view">
+                <img class="cabin-image-carousel-img" src="images/015.jpg" alt="antique wagon by main cabin">
+                <img class="cabin-image-carousel-img" src="images/016.jpg" alt="cabins backyard">
+                <img class="cabin-image-carousel-img" src="images/017.jpg" alt="handcrafted gate to courtyard">
+                <img class="cabin-image-carousel-img" src="images/018.jpg" alt="horseshoe pit">
+                <img class="cabin-image-carousel-img" src="images/020.jpg" alt="handcrafted front gate">
+                <img class="cabin-image-carousel-img" src="images/021.jpg" alt="phonograph heirloom">
+                <img class="cabin-image-carousel-img" src="images/022.jpg" alt="trumpet heirloom">
+                <img class="cabin-image-carousel-img" src="images/023.jpg" alt="cowboy chaps heirloom">
+                <img class="cabin-image-carousel-img" src="images/024.jpg" alt="phone heirloom">
+                <img class="cabin-image-carousel-img" src="images/025.jpg" alt="yoke heirloom">
+                <img class="cabin-image-carousel-img" src="images/026.jpg" alt="guest book image">
+                <img class="cabin-image-carousel-img" src="images/027.jpg" alt="guest cabin">
             </div>
 
             <div class="cabin-page-navigator">
