--- a/mtnBiking.html
+++ b/mtnBiking.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>    
 
         <div class="overview-container">
@@ -91,7 +91,7 @@
         <!--Skyline Drive-->
         <div class="attractions-overview-container">
             <div class="attractions-overview-image">
-                <a href="https://www.trailforks.com/trails/skyline-drive-81188/" target="_blank"><img src="images/071.jpg" alt=""></a>
+                <a href="https://www.trailforks.com/trails/skyline-drive-81188/" target="_blank"><img src="images/071.jpg" alt="skyline drive mountain biking"></a>
             </div>
             <div class="attractions-overview-text hiking-overview-text">
                 <a href="https://www.trailforks.com/trails/skyline-drive-81188/" target="_blank"><h3>Skyline Drive</h3></a>
@@ -106,7 +106,7 @@
             <!--Pioneer Bike Trail-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.trailforks.com/trails/pioneer-10808/" target="_blank"><img src="images/067.jpg" alt=""></a>
+                    <a href="https://www.trailforks.com/trails/pioneer-10808/" target="_blank"><img src="images/067.jpg" alt="pioneer bike trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.trailforks.com/trails/pioneer-10808/" target="_blank"><h3>Pioneer Bike Trail</h3></a>
@@ -121,7 +121,7 @@
             <!--Flume Trail-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.trailforks.com/trails/flume/" target="_blank"><img src="images/058.jpg" alt=""></a>
+                    <a href="https://www.trailforks.com/trails/flume/" target="_blank"><img src="images/058.jpg" alt="flume mtn biking trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.trailforks.com/trails/flume/" target="_blank"><h3>Flume Trail</h3></a>
@@ -136,7 +136,7 @@
             <!--Black Hills Area-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.trailforks.com/region/black-hill-ephraim-19666/" target="_blank"><img src="images/black-hills_1.jpg" alt=""></a>
+                    <a href="https://www.trailforks.com/region/black-hill-ephraim-19666/" target="_blank"><img src="images/black-hills_1.jpg" alt="black hills bike trail"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.trailforks.com/region/black-hill-ephraim-19666/" target="_blank"><h3>Black Hills Area</h3></a>
