--- a/otherAttractions.html
+++ b/otherAttractions.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>    
 
         <div class="overview-container">
@@ -91,11 +91,11 @@
             <!--Palisades-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://stateparks.utah.gov/parks/palisade/" target="_blank"><img src="images/palisades.jpg" alt=""></a>
+                    <a href="https://stateparks.utah.gov/parks/palisade/" target="_blank"><img src="images/palisades.jpg" alt="palisade state park"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://stateparks.utah.gov/parks/palisade/" target="_blank"><h3>Palisade State Park</h3></a>
-                    <p>Palisades has a little something for everyone! Whether it be paddleboards and canoes, grilling dinner while swimming in the lake, fishing, hiking, or golfing, Palisade State Park is a place where you can easily spend the entire day! There are canoes and paddleboards for rental here!</p>
+                    <p>Palisades has a little something for everyone! Whether it be paddleboards and canoes, grilling dinner while swimming in the lake, fishing, hiking, or golfing, Palisade State Park is a place where you can easily spend the entire day! There are canoes and paddleboards for rent here!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://stateparks.utah.gov/parks/palisade/" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -105,11 +105,11 @@
             <!--Gunnison Res-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.bivy.com/adventures/us/utah/gunnison-reservoir-117007" target="_blank"><img src="images/gunnison-res.jpg" alt=""></a>
+                    <a href="https://www.bivy.com/adventures/us/utah/gunnison-reservoir-117007" target="_blank"><img src="images/gunnison-res.jpg" alt="gunnison reservoir"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.bivy.com/adventures/us/utah/gunnison-reservoir-117007" target="_blank"><h3>Gunnison Reservoir</h3></a>
-                    <p>Gunnison Reservoir is a bit smaller than nearby Yuba State Park, but we recommend it since it's a free lake for everyone to use to go boating or waterskiing that is also easily accessible and only short drive from the cabins! There are boat ramps for the public to use and beaches to set up camp!</p>
+                    <p>Gunnison Reservoir is a bit smaller than nearby Yuba State Park, but we recommend it since it's a free lake for everyone to use to go boating or waterskiing that is also easily accessible and only a short drive from the cabins! There are boat ramps for the public to use and beaches to set up camp!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="https://www.bivy.com/adventures/us/utah/gunnison-reservoir-117007" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -119,7 +119,7 @@
             <!--Fishing-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="http://sanpete.com/pages/fish" target="_blank"><img src="images/fishing.jpg" alt=""></a>
+                    <a href="http://sanpete.com/pages/fish" target="_blank"><img src="images/fishing.jpg" alt="fishing in sanpete county"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://sanpete.com/pages/fish" target="_blank"><h3>Fishing</h3></a>
@@ -133,7 +133,7 @@
             <!--Drive In-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.driveinmovie.com/ut/mount-pleasant/basin-drive-in/" target="_blank"><img src="images/drive-in-theater.jpg" alt=""></a>
+                    <a href="https://www.driveinmovie.com/ut/mount-pleasant/basin-drive-in/" target="_blank"><img src="images/drive-in-theater.jpg" alt="mt. pleasant basin drive-in"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.driveinmovie.com/ut/mount-pleasant/basin-drive-in/" target="_blank"><h3>Basin Drive-In Theater</h3></a>
@@ -147,7 +147,7 @@
             <!--Manti Pool-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="http://manticity.com/swimming.html" target="_blank"><img src="images/manti-pool.jpg" alt=""></a>
+                    <a href="http://manticity.com/swimming.html" target="_blank"><img src="images/manti-pool.jpg" alt="manti outdoor pool"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://manticity.com/swimming.html" target="_blank"><h3>Manti Aquatic Center</h3></a>
@@ -161,7 +161,7 @@
             <!-- Mammoth -->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="http://sanpete.com/businesses/show/313-fairview-museum-of-history-and-art" target="_blank"><img src="images/060.jpg" alt=""></a>
+                    <a href="http://sanpete.com/businesses/show/313-fairview-museum-of-history-and-art" target="_blank"><img src="images/060.jpg" alt="historic columbian mammoth"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://sanpete.com/businesses/show/313-fairview-museum-of-history-and-art" target="_blank"><h3>Intact Columbian Mammoth</h3></a>
