--- a/reviews.html
+++ b/reviews.html
@@ -12,7 +12,7 @@
         <!-- Header -->
         <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>
         
         <div class="overview-container">
