--- a/rockClimbing.html
+++ b/rockClimbing.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>    
 
         <div class="overview-container">
@@ -91,7 +91,7 @@
             <!--Schoolroom Area-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.mountainproject.com/area/105739554/schoolroom-area" target="_blank"><img src="images/schoolroom_1.jpg" alt=""></a>
+                    <a href="https://www.mountainproject.com/area/105739554/schoolroom-area" target="_blank"><img src="images/schoolroom_1.jpg" alt="rock climbing in maple canyon"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.mountainproject.com/area/105739554/schoolroom-area" target="_blank"><h3>Schoolroom Area</h3></a>
@@ -106,7 +106,7 @@
             <!--Fast Food Joint-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.mountainproject.com/area/112781208/fast-food-joint" target="_blank"><img src="images/fast-food-joint_1.jpg" alt=""></a>
+                    <a href="https://www.mountainproject.com/area/112781208/fast-food-joint" target="_blank"><img src="images/fast-food-joint_1.jpg" alt="rock climbing in maple canyon"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.mountainproject.com/area/112781208/fast-food-joint" target="_blank"><h3>Fast Food Joint</h3></a>
@@ -121,7 +121,7 @@
              <!--Orangutan Wall-->
              <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.mountainproject.com/area/105841685/orangutan-wall" target="_blank"><img src="images/orangutan-wall_1.jpg" alt=""></a>
+                    <a href="https://www.mountainproject.com/area/105841685/orangutan-wall" target="_blank"><img src="images/orangutan-wall_1.jpg" alt="rock climbing in maple canyon"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.mountainproject.com/area/105841685/orangutan-wall" target="_blank"><h3>Orangutan Wall</h3></a>
@@ -136,7 +136,7 @@
             <!--Walls of Liberation-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.mountainproject.com/area/107679961/walls-of-liberation" target="_blank"><img src="images/walls-of-liberation_1.jpg" alt=""></a>
+                    <a href="https://www.mountainproject.com/area/107679961/walls-of-liberation" target="_blank"><img src="images/walls-of-liberation_1.jpg" alt="rock climbing in maple canyon"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.mountainproject.com/area/107679961/walls-of-liberation" target="_blank"><h3>Walls of Liberation</h3></a>
@@ -151,7 +151,7 @@
             <!--Pipe Dream-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.mountainproject.com/area/105739677/the-pipe-dream" target="_blank"><img src="images/068.jpg" alt=""></a>
+                    <a href="https://www.mountainproject.com/area/105739677/the-pipe-dream" target="_blank"><img src="images/068.jpg" alt="rock climbing in maple canyon"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.mountainproject.com/area/105739677/the-pipe-dream" target="_blank"><h3>Pipe Dream</h3></a>
