--- a/sightseeing.html
+++ b/sightseeing.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,17 +81,17 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>    
 
         <div class="overview-container">
             <h1>Sightseeing</h1>
-            <p>The Wasatch Mountain Range that runs through the heart of Sanpete provides an array of gorgeous sites for all to enjoy. From the high panoramic views on top of Skyline drive to the varied scenery along the Mount Nebo scenic drive, you will not be dissapointed with the experience you have here. Although we've listed some of our favorite places for sightseeing, it's worth mentioning that any of our recommendations under the other attractions pages could also be listed under sightseeing. We're serious though, you'll get great views and sites no matter where you go! So read on below for some of our favorite sightseeing locations not listed under other section, or if you want more sites, we recommend also looking at <a href="http://sanpete.com/pages/drives" target="_blank">Sanpete.com</a> or <a href="https://www.go-utah.com/Sanpete-County/tourism-attractions-sightseeing/" target="_blank">Go-Utah</a>.</p>
+            <p>The Wasatch Mountain Range that runs through the heart of Sanpete provides an array of gorgeous sites for all to enjoy. From the high panoramic views on top of Skyline drive to the varied scenery along the Mount Nebo scenic drive, you will not be dissapointed with the experience you have here. Although we've listed some of our favorite places for sightseeing, it's worth mentioning that any of our recommendations under the other attractions pages could also be listed under sightseeing. We're serious though, you'll get great views and sites no matter where you go! So read on below for some of our favorite sightseeing locations not listed under other sections, or if you want more sites, we recommend also looking at <a href="http://sanpete.com/pages/drives" target="_blank">Sanpete.com</a> or <a href="https://www.go-utah.com/Sanpete-County/tourism-attractions-sightseeing/" target="_blank">Go-Utah</a>.</p>
 
             <!--Skyline Drive-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.go-utah.com/Skyline-Drive/" target="_blank"><img src="images/071.jpg" alt=""></a>
+                    <a href="https://www.go-utah.com/Skyline-Drive/" target="_blank"><img src="images/071.jpg" alt="skyline drive"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.go-utah.com/Skyline-Drive/" target="_blank"><h3>Skyline Drive</h3></a>
@@ -105,7 +105,7 @@
             <!--Nebo Scenic Loop-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.go-utah.com/Skyline-Drive/" target="_blank"><img src="images/065.jpg" alt=""></a>
+                    <a href="https://www.go-utah.com/Skyline-Drive/" target="_blank"><img src="images/065.jpg" alt="mt. nebo scenic loop"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.go-utah.com/Skyline-Drive/" target="_blank"><h3>Nebo Scenic Loop</h3></a>
@@ -119,11 +119,11 @@
             <!--Manti Temple-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://fineartamerica.com/featured/manti-temple-tall-rob-corsetti.html" target="_blank"><img src="images/manti-temple.jpg" alt=""></a>
+                    <a href="https://fineartamerica.com/featured/manti-temple-tall-rob-corsetti.html" target="_blank"><img src="images/manti-temple.jpg" alt="manti LDS temple"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://sanpete.com/pages/temple" target="_blank"><h3>Manti Temple</h3></a>
-                    <p>Built from 1875 to 1893, the Manti temple is an impressive and beautiful building built on top of "temple hill" in Manti, Utah. The temple is a special place of worship for members of The Church of Jesus Christ of Latter-Day Saints, but it's beauty is appreciated by all!</p>
+                    <p>Built from 1875 to 1893, the Manti temple is an impressive and beautiful building built on top of "temple hill" in Manti, Utah. The temple is a special place of worship for members of The Church of Jesus Christ of Latter-Day Saints, but its beauty is appreciated by all!</p>
                 </div>
                 <div class="attractions-overview-clickHere">
                     <a href="http://sanpete.com/pages/temple" target="_blank"><p>Click here</p><p>for more</p><p>information</p></a>
@@ -133,7 +133,7 @@
             <!--Cascading Waterfalls-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="https://www.google.com/maps/d/viewer?hl=en&mid=1GllTUOl9d9QD_GAVsYzoRNSFgxHPmlfb&ll=39.262675491612576%2C-111.41255300880948&z=15" target="_blank"><img src="images/056.jpg" alt=""></a>
+                    <a href="https://www.google.com/maps/d/viewer?hl=en&mid=1GllTUOl9d9QD_GAVsYzoRNSFgxHPmlfb&ll=39.262675491612576%2C-111.41255300880948&z=15" target="_blank"><img src="images/056.jpg" alt="cascading waterfalls"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="https://www.google.com/maps/d/viewer?hl=en&mid=1GllTUOl9d9QD_GAVsYzoRNSFgxHPmlfb&ll=39.262675491612576%2C-111.41255300880948&z=15" target="_blank"><h3>Cascading Waterfalls</h3></a>
