--- a/snowmobiling.html
+++ b/snowmobiling.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>    
 
         <div class="overview-container">
@@ -91,7 +91,7 @@
             <!--Ephraim Canyon-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><img src="images/072.jpg" alt=""></a>
+                    <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><img src="images/072.jpg" alt="snowmobiling in Ephraim"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><h3>Ephraim Canyon</h3></a>
@@ -105,7 +105,7 @@
             <!--Joe's Valley-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><img src="images/snowmobile-2.jpg" alt=""></a>
+                    <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><img src="images/snowmobile-2.jpg" alt="snowmobiling"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><h3>Joe's Valley</h3></a>
@@ -119,7 +119,7 @@
             <!--Miller's Flat-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><img src="images/snowmobile-3.jpg" alt=""></a>
+                    <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><img src="images/snowmobile-3.jpg" alt="snowmobiling"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><h3>Miller's Flat</h3></a>
@@ -133,7 +133,7 @@
             <!--North Skyline Drive-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><img src="images/snowmobile-4.jpg" alt=""></a>
+                    <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><img src="images/snowmobile-4.jpg" alt="snowmobiling"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="downloadables/Skyline_Snowmobile_Map.pdf" target="_blank"><h3>North Skyline Drive</h3></a>
@@ -147,7 +147,7 @@
             <!--Nebo Loop-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                    <a href="http://sanpete.com/downloads/maps/nebo.pdf" target="_blank"><img src="images/snowmobile-5.jpg" alt=""></a>
+                    <a href="http://sanpete.com/downloads/maps/nebo.pdf" target="_blank"><img src="images/snowmobile-5.jpg" alt="group snowmobiling"></a>
                 </div>
                 <div class="attractions-overview-text hiking-overview-text">
                     <a href="http://sanpete.com/downloads/maps/nebo.pdf" target="_blank"><h3>Nebo Loop</h3></a>
