--- a/cabinOverview.html
+++ b/cabinOverview.html
@@ -12,7 +12,7 @@
          <!-- Header -->
          <nav class="solid-header">
             <div class="logo-title-container">
-                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt=""></a>
+                <a href="index.html"><img class="logo-title" src="images/icons/logo_title.svg" alt="logo"></a>
             </div>
             <ul>
                 <li><a href="bookNow.html">Book Now</a></li>
@@ -81,7 +81,7 @@
         <div id="overlay"></div>
 
         <div class="background-image">
-            <img src="images/background-image.jpg" alt="">
+            <img src="images/background-image.jpg" alt="background image of aspen trees">
         </div>
     
 
@@ -92,7 +92,7 @@
             <!--Main Cabin-->
             <div class="cabin-overview-cabins-container">
                 <div class="cabin-overview-cabins-image">
-                        <a href="mainCabin.html"><img src="images/002.jpg" alt=""></a>
+                        <a href="mainCabin.html"><img src="images/002.jpg" alt="Main Cabin"></a>
                 </div>
                 <div class="cabin-overview-cabins-text">
                     <a href="mainCabin.html"><h3>Main Cabin</h3></a>
@@ -120,7 +120,7 @@
             <!--Guest Cabin-->
             <div class="cabin-overview-cabins-container">
                     <div class="cabin-overview-cabins-image">
-                            <a href="guestCabin.html"><img src="images/027.jpg" alt=""></a>
+                            <a href="guestCabin.html"><img src="images/027.jpg" alt="Guest Cabin"></a>
                     </div>
                     <div class="cabin-overview-cabins-text">
                         <a href="guestCabin.html"><h3>Guest Cabin</h3></a>
@@ -148,7 +148,7 @@
                 <!--Both Cabin-->
                 <div class="cabin-overview-cabins-container">
                     <div class="cabin-overview-cabins-image">
-                            <a href="mainCabin.html"><img src="images/001.jpg" alt=""></a>
+                            <a href="mainCabin.html"><img src="images/001.jpg" alt="Main Cabin image"></a>
                     </div>
                     <div class="cabin-overview-cabins-text">
                         <a href="mainCabin.html"><h3>Both Cabins Discount</h3></a>
